Update badges.  Add back support for Java 1.8 by removing enable-preview option